<resources>
    <string name="app_name">events-near-me</string>
    <string name="server_client_id">1015151114131-1f3luibfmvof6koo7mhj8dkee12hrv1h.apps.googleusercontent.com</string>
    <string name="google_maps_api_key">AIzaSyCdo5Qfjow-2sFjfRILgPP8Bwk7paT9Hzo</string>
    <string name="preference_file_name">enmsharedprefs</string>
    <string name="preference_id_key">userID</string>
    <string name="signin_activity_welcome_msg">Welcome to</string>
    <string name="title">EvenTribute</string>
    <string name="confirm">Confirm</string>
    <string name="signin_age_select">Select your date of birth:</string>
    <string name="signin_gender_select">Select your gender:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="title_activity_event_view">EventViewActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="text_default">Loading...</string>
    <string name="name_default">Loading Loading</string>
    <string name="location_missing">Nowhere</string>
    <string name="enter_event_name">Enter an event name</string>
    <string name="enter_start">Enter start time:</string>
    <string name="enter_private">Private event?</string>
    <string name="enter_end">Enter end time:</string>
    <string name="attending">Attending</string>
    <string name="start_time">Start Time: </string>
    <string name="end_time">End Time: </string>
    <string name="event_owner">Event Owner: </string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_attending">You are going to this event</string>
    <string name="sort_distance">Sort by Distance</string>
    <string name="sort_start">Sort by Start Time</string>
    <string name="event_private">Private Event</string>
    <string name="event_public">Public Event</string>
    <string name="event_invite">Invite People</string>
    <string name="event_delete">Delete Event</string>
    <string name="confirm_delete">Are you sure you want to delete this event?</string>
    <string name="confirm_invite">Are you sure you want to invite %1$d people?</string>
    <string name="accepted">Accepted:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="invite_forename">Invite by forename</string>
    <string name="invite_surname">Invite by surname</string>
    <string name="invite_search_no_term">Enter a search to begin</string>
    <string name="directions">Get Directions</string>
    <string name="enter_comment">Enter a comment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time">Time</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
</resources>