<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InviteActivity"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/inviteForenameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invite_forename"/>
        <Button
            android:id="@+id/inviteSurnameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invite_surname"/>
        <Button
            android:id="@+id/inviteConfirmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"/>
    </LinearLayout>

    <TextView
        android:id="@+id/inviteSearchText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invite_search_no_term"/>
    <ListView
        android:id="@+id/inviteList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>